--- a/PTT/AndroidManifest.xml
+++ b/PTT/AndroidManifest.xml
@@ -8,6 +8,12 @@
         android:minSdkVersion="15"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -15,8 +21,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.cnx.ptt.MainActivity"
-            android:label="@string/app_name" 
-            android:launchMode="singleTask">
+            android:label="@string/app_name"
+            android:launchMode="singleTask" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,6 +33,27 @@
             android:name="com.cnx.ptt.DisplayMessageActivity"
             android:label="@string/title_activity_display_message"
             android:parentActivityName="com.cnx.ptt.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.cnx.ptt.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.cnx.ptt.TrackTimeActivity"
+            android:label="@string/title_activity_track_time"
+            android:parentActivityName="com.cnx.ptt.MainActivity"
+            android:launchMode="singleTask" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.cnx.ptt.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.cnx.ptt.zxing.CaptureCodeActivity"
+            android:label="@string/title_activity_capture_code"
+            android:parentActivityName="com.cnx.ptt.TrackTimeActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:windowSoftInputMode="stateAlwaysHidden">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.cnx.ptt.MainActivity" />
