--- a/PTT/AndroidManifest.xml
+++ b/PTT/AndroidManifest.xml
@@ -7,6 +7,11 @@
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="19" />
+    <!-- test case section -->
+    <instrumentation
+        android:name="android.test.InstrumentationTestRunner"
+        android:targetPackage="com.cnx.ptt" >
+    </instrumentation>
 
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -24,15 +29,17 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-library android:name="android.test.runner" />
+
         <activity
-            android:name="com.cnx.activity.MainActivity"
+            android:name="com.cnx.ptt.activity.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask" >
         </activity>
         <activity
             android:name="com.cnx.ptt.DisplayMessageActivity"
             android:label="@string/title_activity_display_message"
-            android:parentActivityName="com.cnx.activity.MainActivity" >
+            android:parentActivityName="com.cnx.ptt.activity.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.cnx.ptt.MainActivity" />
@@ -41,7 +48,7 @@
             android:name="com.cnx.ptt.TrackTimeActivity"
             android:label="@string/title_activity_track_time"
             android:launchMode="singleTask"
-            android:parentActivityName="com.cnx.activity.MainActivity" >
+            android:parentActivityName="com.cnx.ptt.activity.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.cnx.ptt.MainActivity" />
@@ -61,50 +68,44 @@
         <activity
             android:name="com.cnx.ptt.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName="com.cnx.activity.MainActivity" >
+            android:parentActivityName="com.cnx.ptt.activity.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.cnx.ptt.MainActivity" />
         </activity>
         <activity
-            android:name="com.cnx.activity.TaskMonitorActivity"
-            android:label="@string/title_activity_task_mornitor">
-            
-            <meta-data
-                android:name="android.app.default_searchable"
-                android:value="com.cnx.activity.SearchableActivity" />
+            android:name="com.cnx.ptt.activity.TaskMonitorActivity"
+            android:label="@string/title_activity_task_mornitor"
+            android:parentActivityName="com.cnx.ptt.activity.MainActivity" >
         </activity>
         <activity
-            android:name="com.cnx.activity.DisplayTaskActivity"
+            android:name="com.cnx.ptt.activity.DisplayTaskActivity"
             android:label="@string/title_activity_display_task"
-            android:parentActivityName="com.cnx.activity.TaskMonitorActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.cnx.ptt.TaskMornitorActivity" />
+            android:parentActivityName="com.cnx.ptt.activity.TaskMonitorActivity" >
         </activity>
-        <activity
-            android:name="com.cnx.activity.LoginActivity"
-            android:label="@string/title_activity_login"
-            android:windowSoftInputMode="adjustResize|stateVisible" >
-            <intent-filter>
+        <activity android:name="com.cnx.ptt.activity.LoginActivity" />
+        
+        <activity android:name="com.cnx.ptt.activity.SplashActivity">
+             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.cnx.activity.TaskSearchActivity"
-            android:label="@string/title_activity_follow_task" >
+        <activity android:name="com.cnx.ptt.activity.SearchActivity" >
         </activity>
-        <activity android:name="com.cnx.activity.SearchableActivity" >
+        <activity
+            android:name="com.cnx.ptt.activity.TaskSearchActivity"
+            android:label="@string/title_activity_follow_task"
+            android:parentActivityName="com.cnx.ptt.activity.TaskMonitorActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+        <service android:name="com.cnx.ptt.chat.service.MucService" />
     </application>
 
 </manifest>
